# RKMonitor

./: 123.c  CMakeLists.txt  LICENSE  README.md  main  main.c  mpp  sudo
include/: npu.h  proc.h  ram.h  rga.h  tabs.h  vpu.h
src/: npu.c  proc.c  ram.c  rga.c  tabs.c  vpu.c
